--- a/index.html
+++ b/index.html
@@ -76,13 +76,13 @@
     // https://firebase.google.com/docs/web/setup#available-libraries
 
     // Your web app's Firebase configuration
-    const firebaseConfig = {
-      apiKey: "AIzaSyCEGqXL1dtcotOYudzgZklkwZbDzFjCw0U",
-      authDomain: "fichazona.firebaseapp.com",
-      projectId: "fichazona",
-      storageBucket: "fichazona.appspot.com",
-      messagingSenderId: "849742326472",
-      appId: "1:849742326472:web:0ae3b3056b2b301b1693fd"
+        const firebaseConfig = {
+      apiKey: "AIzaSyCqQaVAzfQYIkIbor5sZhEBXlPaE366jM4",
+      authDomain: "ficha-rastros-do-diabo.firebaseapp.com",
+      projectId: "ficha-rastros-do-diabo",
+      storageBucket: "ficha-rastros-do-diabo.appspot.com",
+      messagingSenderId: "683631538894",
+      appId: "1:683631538894:web:a008a7fc594d3091aad69f"
     };
 
     // Initialize Firebase
